syntax = "proto3";

package shared.v1;
option go_package = "github.com/studyguides-com/study-guides-api/api/v1/shared;sharedv1";

import "v1/shared/tagtype.proto";
import "v1/shared/contentrating.proto";

message TagSearchPath {
  string id = 1;
  string name = 2;
  TagType type = 3;
}

message TagSearchResult {
    string id = 1;
    string name = 2;
    TagType type = 4;
    ContentRating content_rating = 7;
    repeated string meta_tags = 8;
    repeated string content_descriptors = 9;
    repeated TagSearchPath tags = 10;
    string context = 11;
    bool public = 12;
    bool has_questions = 13;
    bool has_children = 14;
    string batch_id = 15;
    bool missing_meta_tags = 16;
    bool missing_content_rating = 17;
    bool missing_content_descriptors = 18;
    string object_id = 19;
}